--- a/MeowBili/Info.plist
+++ b/MeowBili/Info.plist
@@ -22,6 +22,8 @@
 	</dict>
 	<key>NSUserActivityTypes</key>
 	<array>
+		<string>ContentSearchIntentIntent</string>
+		<string>INSearchForMediaIntent</string>
 		<string>com.darock.DarockBili.video-play</string>
 	</array>
 	<key>UIAppFonts</key>
