--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili.dynamic.watch.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili.dynamic.watch.xcscheme
@@ -5,6 +5,24 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <PostActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "codesign -fs &quot;${CODE_SIGN_IDENTITY}&quot; &quot;${BUILT_PRODUCTS_DIR}/DarockBili.dynamic.watch.dylib&quot;&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "8CE523BB2B935D6100C89318"
+                     BuildableName = "DarockBili.dynamic.watch.dylib"
+                     BlueprintName = "DarockBili.dynamic.watch"
+                     ReferencedContainer = "container:DarockBili.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PostActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
