--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili.dynamic.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili.dynamic.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "codesign -fs &quot;Apple Development&quot; &quot;${BUILT_PRODUCTS_DIR}/DarockBili.dynamic.dylib&quot;&#10;">
+               scriptText = "codesign -fs &quot;${CODE_SIGN_IDENTITY}&quot; &quot;${BUILT_PRODUCTS_DIR}/DarockBili.dynamic.dylib&quot;&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
