--- a/.github/workflows/dylib-export.yml
+++ b/.github/workflows/dylib-export.yml
@@ -77,8 +77,7 @@ jobs:
 
       - name: Resign Dylibs
         run: |
-          security find-identity -v
-          codesign -fs "Apple Development" build/Build/Products/Release-watchos/DarockBili.dynamic.watch.dylib
+          codesign -fs B57D8PP775 build/Build/Products/Release-watchos/DarockBili.dynamic.watch.dylib
           
       - name: Upload watchOS Dylib
         uses: actions/upload-artifact@v3
